adding more movie titles

--- a/part-3/index.html
+++ b/part-3/index.html
@@ -4,18 +4,16 @@
     <meta charset="utf-8">
     <title>Filmtube</title>
     <link rel="stylesheet" type="text/css" href="style.css">
-
   </head>
   <body>
-    <div class="container">
-      <div class="header">
+      <div class="header-container">
         <span class="filmtube-header">Filmtube</span>
         <button class="logout-header">Logout</button>
       </div>
-    </div>
-    <div class="vertical-container">
-      <div class="navbar-container">
-        <div class="navbar-header"></div>
+
+    <div class="main-container">
+      <div class="navbar-container scroll">
+        <div class="navbar-header">Categories</div>
           <ul>
             <li><a href="#">Drama</a></li>
             <li><a href="#">Romance</a></li>
@@ -23,11 +21,39 @@
             <li><a href="#">Sci-Fi</a></li>
           </ul>
       </div>
-      <div class="main-title">Movies</div>
-      <div class="Drama">
-        <div class="drama-title">Drama</div>
-          
+      <div class="movie-container scroll">
+        <div class="movie-title">Movies</div>
+          <div class="category-title">Drama</div>
+          <div class="movie-content"><button class="content">Play</button><span class="content">Movie Title</span>
+          <span class="content time">1:33:21</span>
+        </div>
+          <div class="movie-content"><button class="content">Play</button><span class="content">Movie Title</span>
+          <span class="content time">1:33:21</span>
+        </div>
+        <div class="movie-content"><button class="content">Play</button><span class="content">Movie Title</span>
+        <span class="content time">1:33:21</span>
       </div>
+        <div class="category-title">Romance</div>
+        <div class="movie-content"><button class="content">Play</button><span class="content">Movie Title</span>
+        <span class="content time">1:33:21</span>
+      </div>
+        <div class="movie-content"><button class="content">Play</button><span class="content">Movie Title</span>
+        <span class="content time">1:33:21</span>
+      </div>
+      <div class="movie-content"><button class="content">Play</button><span class="content">Movie Title</span>
+      <span class="content time">1:33:21</span>
     </div>
+    <div class="category-title">Action</div>
+    <div class="movie-content"><button class="content">Play</button><span class="content">Movie Title</span>
+    <span class="content time">1:33:21</span>
+  </div>
+    <div class="movie-content"><button class="content">Play</button><span class="content">Movie Title</span>
+    <span class="content time">1:33:21</span>
+  </div>
+  <div class="movie-content"><button class="content">Play</button><span class="content">Movie Title</span>
+  <span class="content time">1:33:21</span>
+</div>
+    </div>
+  </div>
   </body>
 </html>
