major cleanup and commenting of html

--- a/part-3/index.html
+++ b/part-3/index.html
@@ -6,12 +6,14 @@
     <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
+    <!-- Everything in the header bar. -->
       <div class="header-container">
         <span class="filmtube-header">Filmtube</span>
         <button class="logout-header">Logout</button>
       </div>
-
+      <!-- This div encapsulates the navbar and main content. -->
     <div class="main-container">
+      <!-- Everything in the side nav bar. -->
       <div class="navbar-container scroll">
         <div class="navbar-header">Categories</div>
           <ul>
@@ -21,39 +23,83 @@
             <li><a href="#">Sci-Fi</a></li>
           </ul>
       </div>
+      <!-- Everything in the main content area. -->
       <div class="movie-container scroll">
+        <!-- Just the title. -->
         <div class="movie-title">Movies</div>
+          <!-- Drama category title. -->
           <div class="category-title">Drama</div>
-          <div class="movie-content"><button class="content">Play</button><span class="content">Movie Title</span>
-          <span class="content time">1:33:21</span>
+          <!-- Drama category movies. -->
+          <div class="movie-content">
+            <button class="content">Play</button>
+            <span class="content">Movie Title</span>
+            <span class="content time">1:33:21</span>
+          </div>
+          <div class="movie-content">
+            <button class="content">Play</button>
+            <span class="content">Movie Title</span>
+            <span class="content time">1:33:21</span>
+          </div>
+          <div class="movie-content">
+            <button class="content">Play</button>
+            <span class="content">Movie Title</span>
+            <span class="content time">1:33:21</span>
+          </div>
+          <!-- Romance category title. -->
+          <div class="category-title">Romance</div>
+          <!-- Romance category movies. -->
+          <div class="movie-content">
+            <button class="content">Play</button>
+            <span class="content">Movie Title</span>
+            <span class="content time">1:33:21</span>
+          </div>
+          <div class="movie-content">
+            <button class="content">Play</button>
+            <span class="content">Movie Title</span>
+            <span class="content time">1:33:21</span>
+          </div>
+          <div class="movie-content">
+            <button class="content">Play</button>
+            <span class="content">Movie Title</span>
+            <span class="content time">1:33:21</span>
+          </div>
+          <!-- Action category title. -->
+          <div class="category-title">Action</div>
+          <!-- Action category movies. -->
+          <div class="movie-content">
+            <button class="content">Play</button>
+            <span class="content">Movie Title</span>
+            <span class="content time">1:33:21</span>
+          </div>
+          <div class="movie-content">
+            <button class="content">Play</button>
+            <span class="content">Movie Title</span>
+            <span class="content time">1:33:21</span>
+          </div>
+          <div class="movie-content">
+            <button class="content">Play</button>
+            <span class="content">Movie Title</span>
+            <span class="content time">1:33:21</span>
+          </div>
+          <!-- Sci-Fi category title. -->
+          <div class="category-title">Sci-Fi</div>
+          <!-- Sci-Fi Category Movies. -->
+          <div class="movie-content">
+            <button class="content">Play</button>
+            <span class="content">Movie Title</span>
+            <span class="content time">1:33:21</span>
+          </div>
+          <div class="movie-content">
+            <button class="content">Play</button>
+            <span class="content">Movie Title</span>
+            <span class="content time">1:33:21</span>
+          </div>
+          <div class="movie-content">
+            <button class="content">Play</button>
+            <span class="content">Movie Title</span>
+            <span class="content time">1:33:21</span>
+          </div>
         </div>
-          <div class="movie-content"><button class="content">Play</button><span class="content">Movie Title</span>
-          <span class="content time">1:33:21</span>
-        </div>
-        <div class="movie-content"><button class="content">Play</button><span class="content">Movie Title</span>
-        <span class="content time">1:33:21</span>
       </div>
-        <div class="category-title">Romance</div>
-        <div class="movie-content"><button class="content">Play</button><span class="content">Movie Title</span>
-        <span class="content time">1:33:21</span>
-      </div>
-        <div class="movie-content"><button class="content">Play</button><span class="content">Movie Title</span>
-        <span class="content time">1:33:21</span>
-      </div>
-      <div class="movie-content"><button class="content">Play</button><span class="content">Movie Title</span>
-      <span class="content time">1:33:21</span>
-    </div>
-    <div class="category-title">Action</div>
-    <div class="movie-content"><button class="content">Play</button><span class="content">Movie Title</span>
-    <span class="content time">1:33:21</span>
-  </div>
-    <div class="movie-content"><button class="content">Play</button><span class="content">Movie Title</span>
-    <span class="content time">1:33:21</span>
-  </div>
-  <div class="movie-content"><button class="content">Play</button><span class="content">Movie Title</span>
-  <span class="content time">1:33:21</span>
-</div>
-    </div>
-  </div>
   </body>
 </html>
