made up a bunch of movie titles to see if my styling stuck, and fixed errors that occured.

--- a/part-3/index.html
+++ b/part-3/index.html
@@ -31,72 +31,72 @@
           <div class="category-title">Drama</div>
           <!-- Drama category movies. -->
           <div class="movie-content">
-            <button class="content">Play</button>
-            <span class="content">Movie Title</span>
+            <button class="content play">Play</button>
+            <span class="content name">Greatfellas</span>
             <span class="content time">1:33:21</span>
           </div>
           <div class="movie-content">
-            <button class="content">Play</button>
-            <span class="content">Movie Title</span>
+            <button class="content play">Play</button>
+            <span class="content name">Oceans 1: The Prequel</span>
             <span class="content time">1:33:21</span>
           </div>
           <div class="movie-content">
-            <button class="content">Play</button>
-            <span class="content">Movie Title</span>
+            <button class="content play">Play</button>
+            <span class="content name">The Ordinary Suspects</span>
             <span class="content time">1:33:21</span>
           </div>
           <!-- Romance category title. -->
           <div class="category-title">Romance</div>
           <!-- Romance category movies. -->
           <div class="movie-content">
-            <button class="content">Play</button>
-            <span class="content">Movie Title</span>
+            <button class="content play">Play</button>
+            <span class="content name">Sleepless in Saskatchewan</span>
             <span class="content time">1:33:21</span>
           </div>
           <div class="movie-content">
-            <button class="content">Play</button>
-            <span class="content">Movie Title</span>
+            <button class="content play">Play</button>
+            <span class="content name">My Frenemy's Wedding</span>
             <span class="content time">1:33:21</span>
           </div>
           <div class="movie-content">
-            <button class="content">Play</button>
-            <span class="content">Movie Title</span>
+            <button class="content play">Play</button>
+            <span class="content name">The Digital Tablet</span>
             <span class="content time">1:33:21</span>
           </div>
           <!-- Action category title. -->
           <div class="category-title">Action</div>
           <!-- Action category movies. -->
           <div class="movie-content">
-            <button class="content">Play</button>
-            <span class="content">Movie Title</span>
+            <button class="content play">Play</button>
+            <span class="content name">The Last Action Critic</span>
             <span class="content time">1:33:21</span>
           </div>
           <div class="movie-content">
-            <button class="content">Play</button>
-            <span class="content">Movie Title</span>
+            <button class="content play">Play</button>
+            <span class="content name">Lethal Kitten 3</span>
             <span class="content time">1:33:21</span>
           </div>
           <div class="movie-content">
-            <button class="content">Play</button>
-            <span class="content">Movie Title</span>
+            <button class="content play">Play</button>
+            <span class="content name">The Dim Squire</span>
             <span class="content time">1:33:21</span>
           </div>
           <!-- Sci-Fi category title. -->
           <div class="category-title">Sci-Fi</div>
           <!-- Sci-Fi Category Movies. -->
           <div class="movie-content">
-            <button class="content">Play</button>
-            <span class="content">Movie Title</span>
+            <button class="content play">Play</button>
+            <span class="content name">Blade Stroller</span>
             <span class="content time">1:33:21</span>
           </div>
           <div class="movie-content">
-            <button class="content">Play</button>
-            <span class="content">Movie Title</span>
+            <button class="content play">Play</button>
+            <span class="content name">Star Squirmishes</span>
             <span class="content time">1:33:21</span>
           </div>
           <div class="movie-content">
-            <button class="content">Play</button>
-            <span class="content">Movie Title</span>
+            <button class="content play">Play</button>
+            <span class="content name">2001 BC: The Real Odyssey</span>
             <span class="content time">1:33:21</span>
           </div>
         </div>
