updated jump links and dealt with fidgety margins

--- a/part-3/index.html
+++ b/part-3/index.html
@@ -14,7 +14,7 @@
       <!-- This div encapsulates the navbar and main content. -->
     <div class="main-container">
       <!-- Everything in the side nav bar. -->
-      <div class="navbar-container scroll">
+      <div class="navbar-container">
         <div class="navbar-header">Categories</div>
 
             <div class="nav"><a href="#drama">Drama</a></div>
@@ -24,89 +24,88 @@
 
       </div>
       <!-- Everything in the main content area. -->
-      <div class="movie-container scroll">
+      <div class="movie-container">
         <!-- Just the title. -->
         <div class="movie-title">Movies</div>
           <!-- Drama category title. -->
-          <a name="drama">
-            <div class="category-title">Drama</div>
-          </a>
-
+          <div class="category">
+              <div id="drama" class="category-title">Drama</div>
           <!-- Drama category movies. -->
-          <div class="movie-content">
-            <button class="content play">Play</button>
-            <span class="content name">Greatfellas</span>
-            <span class="content time">1:33:21</span>
-          </div>
-          <div class="movie-content">
-            <button class="content play">Play</button>
-            <span class="content name">Oceans 1: The Prequel</span>
-            <span class="content time">1:33:21</span>
-          </div>
-          <div class="movie-content">
-            <button class="content play">Play</button>
-            <span class="content name">The Ordinary Suspects</span>
-            <span class="content time">1:33:21</span>
+            <div class="movie-content">
+              <button class="content play">Play</button>
+              <span class="content name">Greatfellas</span>
+              <span class="content time">1:33:21</span>
+            </div>
+            <div class="movie-content">
+              <button class="content play">Play</button>
+              <span class="content name">Oceans 1: The Prequel</span>
+              <span class="content time">1:33:21</span>
+            </div>
+            <div class="movie-content">
+              <button class="content play">Play</button>
+              <span class="content name">The Ordinary Suspects</span>
+              <span class="content time">1:33:21</span>
+            </div>
           </div>
           <!-- Romance category title. -->
-          <a name="romance">
-            <div class="category-title">Romance</div>
-          </a>
-          <!-- Romance category movies. -->
-          <div class="movie-content">
-            <button class="content play">Play</button>
-            <span class="content name">Sleepless in Saskatchewan</span>
-            <span class="content time">1:33:21</span>
-          </div>
-          <div class="movie-content">
-            <button class="content play">Play</button>
-            <span class="content name">My Frenemy's Wedding</span>
-            <span class="content time">1:33:21</span>
-          </div>
-          <div class="movie-content">
-            <button class="content play">Play</button>
-            <span class="content name">The Digital Tablet</span>
-            <span class="content time">1:33:21</span>
+          <div class="category">
+              <div id="romance" class="category-title">Romance</div>
+            <!-- Romance category movies. -->
+            <div class="movie-content">
+              <button class="content play">Play</button>
+              <span class="content name">Sleepless in Saskatchewan</span>
+              <span class="content time">1:33:21</span>
+            </div>
+            <div class="movie-content">
+              <button class="content play">Play</button>
+              <span class="content name">My Frenemy's Wedding</span>
+              <span class="content time">1:33:21</span>
+            </div>
+            <div class="movie-content">
+              <button class="content play">Play</button>
+              <span class="content name">The Digital Tablet</span>
+              <span class="content time">1:33:21</span>
+            </div>
           </div>
           <!-- Action category title. -->
-          <a name="action">
-            <div class="category-title">Action</div>
-          </a>
-          <!-- Action category movies. -->
-          <div class="movie-content">
-            <button class="content play">Play</button>
-            <span class="content name">The Last Action Critic</span>
-            <span class="content time">1:33:21</span>
-          </div>
-          <div class="movie-content">
-            <button class="content play">Play</button>
-            <span class="content name">Lethal Kitten 3</span>
-            <span class="content time">1:33:21</span>
-          </div>
-          <div class="movie-content">
-            <button class="content play">Play</button>
-            <span class="content name">The Dim Squire</span>
-            <span class="content time">1:33:21</span>
+          <div class="category">
+              <div id="action" class="category-title">Action</div>
+            <!-- Action category movies. -->
+            <div class="movie-content">
+              <button class="content play">Play</button>
+              <span class="content name">The Last Action Critic</span>
+              <span class="content time">1:33:21</span>
+            </div>
+            <div class="movie-content">
+              <button class="content play">Play</button>
+              <span class="content name">Lethal Kitten 3</span>
+              <span class="content time">1:33:21</span>
+            </div>
+            <div class="movie-content">
+              <button class="content play">Play</button>
+              <span class="content name">The Dim Squire</span>
+              <span class="content time">1:33:21</span>
+            </div>
           </div>
           <!-- Sci-Fi category title. -->
-          <a name="scifi">
-            <div class="category-title">Sci-Fi</div>
-          </a>
-          <!-- Sci-Fi Category Movies. -->
-          <div class="movie-content">
-            <button class="content play">Play</button>
-            <span class="content name">Blade Stroller</span>
-            <span class="content time">1:33:21</span>
-          </div>
-          <div class="movie-content">
-            <button class="content play">Play</button>
-            <span class="content name">Star Squirmishes</span>
-            <span class="content time">1:33:21</span>
-          </div>
-          <div class="movie-content">
-            <button class="content play">Play</button>
-            <span class="content name">2001 BC: The Real Odyssey</span>
-            <span class="content time">1:33:21</span>
+          <div class="category">
+              <div id="scifi" class="category-title">Sci-Fi</div>
+            <!-- Sci-Fi Category Movies. -->
+            <div class="movie-content">
+              <button class="content play">Play</button>
+              <span class="content name">Blade Stroller</span>
+              <span class="content time">1:33:21</span>
+            </div>
+            <div class="movie-content">
+              <button class="content play">Play</button>
+              <span class="content name">Star Squirmishes</span>
+              <span class="content time">1:33:21</span>
+            </div>
+            <div class="movie-content">
+              <button class="content play">Play</button>
+              <span class="content name">2001 BC: The Real Odyssey</span>
+              <span class="content time">1:33:21</span>
+            </div>
           </div>
         </div>
       </div>
