got sticky header and footer working

--- a/part-3/index.html
+++ b/part-3/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
+    <div class="giant-container">
     <!-- Everything in the header bar. -->
       <div class="header-container">
         <span class="filmtube-header">Filmtube</span>
@@ -112,5 +113,6 @@
       <div class="footer-container">
         <div class="rights"><p>This is a parody site, obviously.</p></div>
       </div>
+    </div>
   </body>
 </html>
