--- a/part-3/index.html
+++ b/part-3/index.html
@@ -6,11 +6,10 @@
     <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
-    <div class="giant-container">
     <!-- Everything in the header bar. -->
       <div class="header-container">
-        <span class="filmtube-header">Filmtube</span>
-        <button class="logout-header">Logout</button>
+        <span class="header-filmtube">Filmtube</span>
+        <button class="header-logout">Logout</button>
       </div>
       <!-- This div encapsulates the navbar and main content. -->
     <div class="main-container">
@@ -111,8 +110,7 @@
         </div>
       </div>
       <div class="footer-container">
-        <div class="rights"><p>This is a parody site, obviously.</p></div>
+        <div class="rights"><p>Fake Copyright</p></div>
       </div>
-    </div>
   </body>
 </html>
