--- a/part-3/index.html
+++ b/part-3/index.html
@@ -110,7 +110,7 @@
         </div>
       </div>
       <div class="footer-container">
-        <div class="rights"><p>Fake Copyright</p></div>
+        <div class="rights"><p>This parody created by Framinus</p></div>
       </div>
   </body>
 </html>
